force-app/main/default/objects/Lead/fields/Converted_Patient__c.field-meta.xml
<CustomField>
    <fullName>Converted_Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Converted Patient</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>Source Leads</relationshipLabel>
    <relationshipName>Source_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>