force-app/main/default/objects/Lead/fields/Interested_Department__c.field-meta.xml
<CustomField>
    <fullName>Interested_Department__c</fullName>
    <label>Interested Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value><fullName>Cardiology</fullName><default>false</default><label>Cardiology</label></value>
            <value><fullName>Oncology</fullName><default>false</default><label>Oncology</label></value>
            <value><fullName>Nephrology</fullName><default>false</default><label>Nephrology</label></value>
            <value><fullName>Neurology</fullName><default>false</default><label>Neurology</label></value>
            <value><fullName>Orthopedics</fullName><default>false</default><label>Orthopedics</label></value>
            <value><fullName>Pediatrics</fullName><default>false</default><label>Pediatrics</label></value>
            <value><fullName>ENT</fullName><default>false</default><label>ENT</label></value>
            <value><fullName>General Medicine</fullName><default>false</default><label>General Medicine</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>