force-app/main/default/objects/Lead/fields/Lead_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lead_Stage__c</fullName>
    <label>Lead Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>New</fullName><default>true</default><label>New</label></value>
            <value><fullName>Contacted</fullName><default>false</default><label>Contacted</label></value>
            <value><fullName>Referred</fullName><default>false</default><label>Referred</label></value>
            <value><fullName>Visited</fullName><default>false</default><label>Visited</label></value>
            <value><fullName>Converted</fullName><default>false</default><label>Converted</label></value>
            <value><fullName>Lost</fullName><default>false</default><label>Lost</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>