force-app/main/default/objects/Lead/fields/Preferred_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Doctor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>